Table align fix

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -35,9 +35,3 @@ textarea.markdown {
 #sidebar > p {
 	text-align: center;
 }
-
-@media screen and (min-width: 1024px){
-  table th {
-		width: 400px;
-	}
-}
